--- a/kapa_quant.ipynb
+++ b/kapa_quant.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "# CHANGE ME: dilution_factor changes based on experiment\n",
     "\n",
-    "dilution_factor = float(input('enter dilution factor. E.g. 1:1000 dilution enter \"1000\"'))\n",
+    "dilution_factor = float(input(\"enter dilution factor. E.g. 1:1000 dilution enter '1000'\"))\n",
     "dilution_factor = dilution_factor / 1000"
    ]
   },
@@ -33,11 +33,11 @@
    "source": [
     "# CHANGE ME: point plate_1 to the csv file coming from the bio-rad thermal cycler\n",
     "\n",
-    "plate_1 = pd.read_csv('~/Documents/projects/sc_wgbs_comp/laird/20220321_rmgii_scwgbs/20220329_rmgii_scwgbs_qpcr/admin_2022-03-29 11-47-44_CT025776_plate1.csv', header = 19) \n",
-    "plate_1['starting_quantity_dilution_corrected'] = plate_1['Starting Quantity (SQ)'] * dilution_factor\n",
+    "plate_1 = pd.read_csv(\"\", header = 19) \n",
+    "plate_1[\"starting_quantity_dilution_corrected\"] = plate_1[\"Starting Quantity (SQ)\"] * dilution_factor\n",
     "plate_1 = plate_1[12:96]\n",
-    "plate_1_index = pd.read_csv('~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_1_index.csv')\n",
-    "plate_1 = pd.merge(plate_1, plate_1_index, on = 'Well')"
+    "plate_1_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_1_index.csv\")\n",
+    "plate_1 = pd.merge(plate_1, plate_1_index, on = \"Well\")"
    ]
   },
   {
@@ -50,11 +50,11 @@
    "source": [
     "# CHANGE ME: point plate_2 to the csv file coming from the bio-rad thermal cycler\n",
     "\n",
-    "plate_2 = pd.read_csv('~/Documents/projects/sc_wgbs_comp/laird/20220321_rmgii_scwgbs/20220329_rmgii_scwgbs_qpcr/admin_2022-03-29 11-45-02_795BR02066_plate2.csv', header = 19) \n",
-    "plate_2['starting_quantity_dilution_corrected'] = plate_2['Starting Quantity (SQ)'] * dilution_factor\n",
+    "plate_2 = pd.read_csv(\"\", header = 19) \n",
+    "plate_2[\"starting_quantity_dilution_corrected\"] = plate_2[\"Starting Quantity (SQ)\"] * dilution_factor\n",
     "plate_2 = plate_2[12:96]\n",
-    "plate_2_index = pd.read_csv('~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_2_index.csv')\n",
-    "plate_2 = pd.merge(plate_2, plate_2_index, on = 'Well')"
+    "plate_2_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_2_index.csv\")\n",
+    "plate_2 = pd.merge(plate_2, plate_2_index, on = \"Well\")"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_plate = pd.DataFrame(columns = ['well', 'concentration_nm'])\n",
+    "sample_plate = pd.DataFrame(columns = [\"well\", \"concentration_nm\"])\n",
     "sample_plate.well = [ \n",
     "'A01', 'A02', 'A03', 'A04', 'A05', 'A06', 'A07', 'A08', 'A09', 'A10', 'A11', 'A12',\n",
     "'B01', 'B02', 'B03', 'B04', 'B05', 'B06', 'B07', 'B08', 'B09', 'B10', 'B11', 'B12',\n",
@@ -193,14 +193,15 @@
    "source": [
     "# CHANGE ME: point sample_plate_for_pooling to the experiment's directory for future reference\n",
     "\n",
-    "sample_plate_for_pooling.to_csv(r'~/Documents/code/git_hub/kapa_quantification_to_pooling/pooling_sample_plate.csv', index = False)"
+    "sample_plate_for_pooling.to_csv(r\"\", index = False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
-   "name": "python38864bitbaseconda0ec3ecb71e3d46ab8893638a987a89a7"
+   "display_name": "Python 3.8.8 ('base')",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -212,9 +213,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8-final"
+   "version": "3.8.8"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "vscode": {
+   "interpreter": {
+    "hash": "4b1d709454758155bdbdfdae4f21284fdbfe3f291544079d2527636be25f1e41"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
