simplified the example code

--- a/example/kapa_quant_example.ipynb
+++ b/example/kapa_quant_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,32 +11,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# CHANGE ME: dilution_factor changes based on experiment\n",
+    "# CHANGEME: dilution factor changes based on experiment  (E.g. for a 1:1000 dilution the dilution factor is 1000)\n",
     "\n",
-    "dilution_factor = float(input(\"enter dilution factor. E.g. 1:1000 dilution enter '1000'\"))\n",
-    "dilution_factor = dilution_factor / 1000\n",
+    "dilution_factor = 10000\n",
     "\n",
-    "dilution_factor"
+    "# CHANGEME: change file path to the csv file that came off the thermal cycler for plate 1 (corresponding to rows A, B, C and D of the sample plate)\n",
+    "\n",
+    "input_plate_1 = \"~/Documents/projects/sc_wgbs_comp/laird/20220321_rmgii_scwgbs/20220329_rmgii_scwgbs_qpcr/admin_2022-03-29 11-47-44_CT025776_plate1.csv\"\n",
+    "\n",
+    "# CHANGEME: change file path to the csv file that came off the thermal cycler for plate 1 (corresponding to rows E, F, G and H of the sample plate)\n",
+    "\n",
+    "input_plate_2 = \"~/Documents/projects/sc_wgbs_comp/laird/20220321_rmgii_scwgbs/20220329_rmgii_scwgbs_qpcr/admin_2022-03-29 11-45-02_795BR02066_plate2.csv\"\n",
+    "\n",
+    "# CHANGEME: change file path to the directory of the experimental data\n",
+    "\n",
+    "output = \"~/Documents/code/git_hub/kapa_quantification_to_pooling/example/pooling_example.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dilution_factor_with_units_conversion = dilution_factor / 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -239,18 +246,20 @@
        "[84 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# CHANGE ME: point plate_1 to the csv file coming from the bio-rad thermal cycler\n",
+    "plate_1 = pd.read_csv(input_plate_1, header = 19) \n",
     "\n",
-    "plate_1 = pd.read_csv(\"~/Documents/projects/sc_wgbs_comp/laird/20220321_rmgii_scwgbs/20220329_rmgii_scwgbs_qpcr/admin_2022-03-29 11-47-44_CT025776_plate1.csv\", header = 19) \n",
-    "plate_1[\"starting_quantity_dilution_corrected\"] = plate_1[\"Starting Quantity (SQ)\"] * dilution_factor\n",
+    "plate_1[\"starting_quantity_dilution_corrected\"] = plate_1[\"Starting Quantity (SQ)\"] * dilution_factor_with_units_conversion\n",
+    "\n",
     "plate_1 = plate_1[12:96]\n",
+    "\n",
     "plate_1_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_1_index.csv\")\n",
+    "\n",
     "plate_1 = pd.merge(plate_1, plate_1_index, on = \"Well\")\n",
     "\n",
     "plate_1"
@@ -258,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -461,18 +470,20 @@
        "[84 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# CHANGE ME: point plate_2 to the csv file coming from the bio-rad thermal cycler\n",
+    "plate_2 = pd.read_csv(input_plate_2, header = 19)\n",
     "\n",
-    "plate_2 = pd.read_csv(\"~/Documents/projects/sc_wgbs_comp/laird/20220321_rmgii_scwgbs/20220329_rmgii_scwgbs_qpcr/admin_2022-03-29 11-45-02_795BR02066_plate2.csv\", header = 19) \n",
-    "plate_2[\"starting_quantity_dilution_corrected\"] = plate_2[\"Starting Quantity (SQ)\"] * dilution_factor\n",
+    "plate_2[\"starting_quantity_dilution_corrected\"] = plate_2[\"Starting Quantity (SQ)\"] * dilution_factor_with_units_conversion\n",
+    "\n",
     "plate_2 = plate_2[12:96]\n",
+    "\n",
     "plate_2_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_2_index.csv\")\n",
+    "\n",
     "plate_2 = pd.merge(plate_2, plate_2_index, on = \"Well\")\n",
     "\n",
     "plate_2"
@@ -480,11 +491,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_plate = pd.DataFrame(columns = [\"well\", \"concentration_nm\"])\n",
+    "\n",
     "sample_plate.well = [ \n",
     "'A01', 'A02', 'A03', 'A04', 'A05', 'A06', 'A07', 'A08', 'A09', 'A10', 'A11', 'A12',\n",
     "'B01', 'B02', 'B03', 'B04', 'B05', 'B06', 'B07', 'B08', 'B09', 'B10', 'B11', 'B12',\n",
@@ -499,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,15 +524,8 @@
     "    sample_plate.concentration_nm[x] = (plate_1.starting_quantity_dilution_corrected[y] + plate_1.starting_quantity_dilution_corrected[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
-    "    z += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    z += 1\n",
+    "\n",
     "# fill in samples in row B\n",
     "\n",
     "x = 12\n",
@@ -530,15 +535,8 @@
     "    sample_plate.concentration_nm[x] = (plate_1.starting_quantity_dilution_corrected[y] + plate_1.starting_quantity_dilution_corrected[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
-    "    z += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    z += 1\n",
+    "\n",
     "# fill in samples in row C\n",
     "\n",
     "x = 24\n",
@@ -548,15 +546,8 @@
     "    sample_plate.concentration_nm[x] = (plate_1.starting_quantity_dilution_corrected[y] + plate_1.starting_quantity_dilution_corrected[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
-    "    z += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    z += 1\n",
+    "\n",
     "# fill in samples in row D\n",
     "\n",
     "x = 36\n",
@@ -569,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,15 +573,8 @@
     "    sample_plate.concentration_nm[x] = (plate_2.starting_quantity_dilution_corrected[y] + plate_2.starting_quantity_dilution_corrected[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
-    "    z += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    z += 1\n",
+    "\n",
     "# fill in samples in row F\n",
     "\n",
     "x = 60\n",
@@ -600,15 +584,8 @@
     "    sample_plate.concentration_nm[x] = (plate_2.starting_quantity_dilution_corrected[y] + plate_2.starting_quantity_dilution_corrected[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
-    "    z += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    z += 1\n",
+    "\n",
     "# fill in samples in row G\n",
     "\n",
     "x = 72\n",
@@ -618,15 +595,8 @@
     "    sample_plate.concentration_nm[x] = (plate_2.starting_quantity_dilution_corrected[y] + plate_2.starting_quantity_dilution_corrected[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
-    "    z += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    z += 1\n",
+    "\n",
     "# fill in samples in row H\n",
     "\n",
     "x = 84\n",
@@ -639,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -745,18 +715,20 @@
        "[96 rows x 2 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_plate"
+    "sample_plate_df = sample_plate\n",
+    "\n",
+    "sample_plate_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +834,7 @@
        "[81 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,20 +842,18 @@
    "source": [
     "# Illumina pooling calculator only accepts libraries with concentration greater than 0.5 nm\n",
     "\n",
-    "sample_plate_for_pooling = sample_plate[sample_plate.concentration_nm > 0.5]\n",
+    "sample_plate_for_pooling_csv = sample_plate[sample_plate.concentration_nm > 0.5]\n",
     "\n",
-    "sample_plate_for_pooling"
+    "sample_plate_for_pooling_csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CHANGE ME: point sample_plate_for_pooling to the experiment's directory for future reference\n",
-    "\n",
-    "sample_plate_for_pooling.to_csv(r\"~/Documents/code/git_hub/kapa_quantification_to_pooling/example/pooling_sample_plate.csv\", index = False)"
+    "sample_plate_for_pooling_csv.to_csv(output, index = False)"
    ]
   },
   {
