--- a/kapa_quant.ipynb
+++ b/kapa_quant.ipynb
@@ -17,53 +17,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CHANGE ME: dilution_factor changes based on experiment\n",
+    "# CHANGEME: dilution factor changes based on experiment  (E.g. for a 1:1000 dilution the dilution factor is 1000)\n",
     "\n",
-    "dilution_factor = float(input(\"enter dilution factor. E.g. 1:1000 dilution enter '1000'\"))\n",
-    "dilution_factor = dilution_factor / 1000"
+    "dilution_factor = \n",
+    "\n",
+    "# CHANGEME: change file path to the csv file that came off the thermal cycler for plate 1 (corresponding to rows A, B, C and D of the sample plate)\n",
+    "\n",
+    "input_plate_1 = \"\"\n",
+    "\n",
+    "# CHANGEME: change file path to the csv file that came off the thermal cycler for plate 1 (corresponding to rows E, F, G and H of the sample plate)\n",
+    "\n",
+    "input_plate_2 = \"\"\n",
+    "\n",
+    "# CHANGEME: change file path to the directory of the experimental data\n",
+    "\n",
+    "output = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# CHANGE ME: point plate_1 to the csv file coming from the bio-rad thermal cycler\n",
+    "dilution_factor_with_units_conversion = dilution_factor / 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plate_1 = pd.read_csv(input_plate_1, header = 19) \n",
     "\n",
-    "plate_1 = pd.read_csv(\"\", header = 19) \n",
-    "plate_1[\"starting_quantity_dilution_corrected\"] = plate_1[\"Starting Quantity (SQ)\"] * dilution_factor\n",
+    "plate_1[\"starting_quantity_dilution_corrected\"] = plate_1[\"Starting Quantity (SQ)\"] * dilution_factor_with_units_conversion\n",
+    "\n",
     "plate_1 = plate_1[12:96]\n",
+    "\n",
     "plate_1_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_1_index.csv\")\n",
-    "plate_1 = pd.merge(plate_1, plate_1_index, on = \"Well\")"
+    "\n",
+    "plate_1 = pd.merge(plate_1, plate_1_index, on = \"Well\")\n",
+    "\n",
+    "plate_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# CHANGE ME: point plate_2 to the csv file coming from the bio-rad thermal cycler\n",
+    "plate_2 = pd.read_csv(input_plate_2, header = 19)\n",
     "\n",
-    "plate_2 = pd.read_csv(\"\", header = 19) \n",
-    "plate_2[\"starting_quantity_dilution_corrected\"] = plate_2[\"Starting Quantity (SQ)\"] * dilution_factor\n",
+    "plate_2[\"starting_quantity_dilution_corrected\"] = plate_2[\"Starting Quantity (SQ)\"] * dilution_factor_with_units_conversion\n",
+    "\n",
     "plate_2 = plate_2[12:96]\n",
+    "\n",
     "plate_2_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_2_index.csv\")\n",
-    "plate_2 = pd.merge(plate_2, plate_2_index, on = \"Well\")"
+    "\n",
+    "plate_2 = pd.merge(plate_2, plate_2_index, on = \"Well\")\n",
+    "\n",
+    "plate_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_plate = pd.DataFrame(columns = [\"well\", \"concentration_nm\"])\n",
+    "\n",
     "sample_plate.well = [ \n",
     "'A01', 'A02', 'A03', 'A04', 'A05', 'A06', 'A07', 'A08', 'A09', 'A10', 'A11', 'A12',\n",
     "'B01', 'B02', 'B03', 'B04', 'B05', 'B06', 'B07', 'B08', 'B09', 'B10', 'B11', 'B12',\n",
@@ -78,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,24 +201,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_plate_df = sample_plate\n",
+    "\n",
+    "sample_plate_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Illumina pooling calculator only accepts libraries with concentration greater than 0.5 nm\n",
     "\n",
-    "sample_plate_for_pooling = sample_plate[sample_plate.concentration_nm > 0.5]"
+    "sample_plate_for_pooling_csv = sample_plate[sample_plate.concentration_nm > 0.5]\n",
+    "\n",
+    "sample_plate_for_pooling_csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CHANGE ME: point sample_plate_for_pooling to the experiment's directory for future reference\n",
-    "\n",
-    "sample_plate_for_pooling.to_csv(r\"\", index = False)"
+    "sample_plate_for_pooling_csv.to_csv(output, index = False)"
    ]
   }
  ],
