added melt temperature functionality and QC plots

--- a/example/kapa_quant_example.ipynb
+++ b/example/kapa_quant_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "[84 rows x 9 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,18 +256,24 @@
     "\n",
     "plate_1[\"starting_quantity_dilution_corrected\"] = plate_1[\"Starting Quantity (SQ)\"] * dilution_factor_with_units_conversion\n",
     "\n",
+    "# plate_1[\"melt_temp\"] = plate_1[\"Melt Temperature\"]\n",
+    "\n",
+    "# plate_1 = plate_1.replace(\"None\", 0)\n",
+    "\n",
     "plate_1 = plate_1[12:96]\n",
     "\n",
     "plate_1_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_1_index.csv\")\n",
     "\n",
     "plate_1 = pd.merge(plate_1, plate_1_index, on = \"Well\")\n",
     "\n",
+    "# plate_1 = plate_1.astype({\"melt_temp\": \"float64\"})\n",
+    "\n",
     "plate_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +476,7 @@
        "[84 rows x 9 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,18 +486,24 @@
     "\n",
     "plate_2[\"starting_quantity_dilution_corrected\"] = plate_2[\"Starting Quantity (SQ)\"] * dilution_factor_with_units_conversion\n",
     "\n",
+    "# plate_2[\"melt_temp\"] = plate_2[\"Melt Temperature\"]\n",
+    "\n",
+    "# plate_2 = plate_2.replace(\"None\", 0)\n",
+    "\n",
     "plate_2 = plate_2[12:96]\n",
     "\n",
     "plate_2_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_2_index.csv\")\n",
     "\n",
     "plate_2 = pd.merge(plate_2, plate_2_index, on = \"Well\")\n",
     "\n",
+    "# plate_2 = plate_2.astype({\"melt_temp\": \"float64\"})\n",
+    "\n",
     "plate_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,126 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>well</th>\n",
-       "      <th>concentration_nm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A01</td>\n",
-       "      <td>3.800388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A02</td>\n",
-       "      <td>2.378362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A03</td>\n",
-       "      <td>5.218853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A04</td>\n",
-       "      <td>2.925735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A05</td>\n",
-       "      <td>7.548144</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>H08</td>\n",
-       "      <td>0.598999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>H09</td>\n",
-       "      <td>4.699063</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>H10</td>\n",
-       "      <td>0.201747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>H11</td>\n",
-       "      <td>1.233663</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>H12</td>\n",
-       "      <td>5.166049</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>96 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   well concentration_nm\n",
-       "0   A01         3.800388\n",
-       "1   A02         2.378362\n",
-       "2   A03         5.218853\n",
-       "3   A04         2.925735\n",
-       "4   A05         7.548144\n",
-       "..  ...              ...\n",
-       "91  H08         0.598999\n",
-       "92  H09         4.699063\n",
-       "93  H10         0.201747\n",
-       "94  H11         1.233663\n",
-       "95  H12         5.166049\n",
-       "\n",
-       "[96 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_plate_df = sample_plate\n",
-    "\n",
-    "sample_plate_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +727,7 @@
        "[81 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,13 +748,6 @@
    "source": [
     "sample_plate_for_pooling_csv.to_csv(output, index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
