--- a/kapa_quant.ipynb
+++ b/kapa_quant.ipynb
@@ -8,7 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "directory = '/put/path/to/experiment/directory/here'"
    ]
   },
   {
@@ -18,20 +19,16 @@
    "outputs": [],
    "source": [
     "# CHANGEME: dilution factor changes based on experiment  (E.g. for a 1:1000 dilution the dilution factor is 1000)\n",
-    "\n",
     "dilution_factor = \n",
     "\n",
     "# CHANGEME: change file path to the csv file that came off the thermal cycler for plate 1 (corresponding to rows A, B, C and D of the sample plate)\n",
-    "\n",
-    "input_plate_1 = \"\"\n",
+    "input_plate_1 = '/put/path/csv/from/plate1/from/thermal/cycler/here'\n",
     "\n",
     "# CHANGEME: change file path to the csv file that came off the thermal cycler for plate 1 (corresponding to rows E, F, G and H of the sample plate)\n",
-    "\n",
-    "input_plate_2 = \"\"\n",
+    "input_plate_2 = '/put/path/csv/from/plate2/from/thermal/cycler/here'\n",
     "\n",
     "# CHANGEME: change file path to the directory of the experimental data\n",
-    "\n",
-    "output = \"\""
+    "output = directory + '/data/filename.csv'"
    ]
   },
   {
@@ -50,14 +47,13 @@
    "outputs": [],
    "source": [
     "plate_1 = pd.read_csv(input_plate_1, header = 19) \n",
-    "\n",
-    "plate_1[\"starting_quantity_dilution_corrected\"] = plate_1[\"Starting Quantity (SQ)\"] * dilution_factor_with_units_conversion\n",
-    "\n",
+    "plate_1['starting_quantity_dilution_corrected'] = plate_1['Starting Quantity (SQ)'] * dilution_factor_with_units_conversion\n",
+    "plate_1'melt_temp'] = plate_1['Melt Temperature']\n",
+    "plate_1 = plate_1.replace('None', 0)\n",
     "plate_1 = plate_1[12:96]\n",
-    "\n",
-    "plate_1_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_1_index.csv\")\n",
-    "\n",
-    "plate_1 = pd.merge(plate_1, plate_1_index, on = \"Well\")\n",
+    "plate_1_index = pd.read_csv('~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_1_index.csv')\n",
+    "plate_1 = pd.merge(plate_1, plate_1_index, on = 'Well')\n",
+    "plate_1 = plate_1.astype({'melt_temp': 'float64'})\n",
     "\n",
     "plate_1"
    ]
@@ -69,14 +65,13 @@
    "outputs": [],
    "source": [
     "plate_2 = pd.read_csv(input_plate_2, header = 19)\n",
-    "\n",
-    "plate_2[\"starting_quantity_dilution_corrected\"] = plate_2[\"Starting Quantity (SQ)\"] * dilution_factor_with_units_conversion\n",
-    "\n",
+    "plate_2['starting_quantity_dilution_corrected'] = plate_2['Starting Quantity (SQ)'] * dilution_factor_with_units_conversion\n",
+    "plate_2['melt_temp'] = plate_2['Melt Temperature']\n",
+    "plate_2 = plate_2.replace('None', 0)\n",
     "plate_2 = plate_2[12:96]\n",
-    "\n",
-    "plate_2_index = pd.read_csv(\"~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_2_index.csv\")\n",
-    "\n",
-    "plate_2 = pd.merge(plate_2, plate_2_index, on = \"Well\")\n",
+    "plate_2_index = pd.read_csv('~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_2_index.csv')\n",
+    "plate_2 = pd.merge(plate_2, plate_2_index, on = 'Well')\n",
+    "plate_2 = plate_2.astype({'melt_temp': 'float64'})\n",
     "\n",
     "plate_2"
    ]
@@ -87,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_plate = pd.DataFrame(columns = [\"well\", \"concentration_nm\"])\n",
+    "sample_plate = pd.DataFrame(columns = ['well', 'concentration_nm', 'melt_temp'])\n",
     "\n",
     "sample_plate.well = [ \n",
     "'A01', 'A02', 'A03', 'A04', 'A05', 'A06', 'A07', 'A08', 'A09', 'A10', 'A11', 'A12',\n",
@@ -108,44 +103,44 @@
    "outputs": [],
    "source": [
     "# fill in samples in row A\n",
-    "\n",
     "x = 0\n",
     "y = 0\n",
     "z = 12\n",
     "while x <= 11:\n",
     "    sample_plate.concentration_nm[x] = (plate_1.starting_quantity_dilution_corrected[y] + plate_1.starting_quantity_dilution_corrected[z]) / 2\n",
+    "    sample_plate.melt_temp[x] = (plate_1.melt_temp[y] + plate_1.melt_temp[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
     "    z += 1\n",
     "\n",
     "# fill in samples in row B\n",
-    "\n",
     "x = 12\n",
     "y = 24\n",
     "z = 36\n",
     "while x <= 23:\n",
     "    sample_plate.concentration_nm[x] = (plate_1.starting_quantity_dilution_corrected[y] + plate_1.starting_quantity_dilution_corrected[z]) / 2\n",
+    "    sample_plate.melt_temp[x] = (plate_1.melt_temp[y] + plate_1.melt_temp[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
     "    z += 1\n",
     "\n",
     "# fill in samples in row C\n",
-    "\n",
     "x = 24\n",
     "y = 48\n",
     "z = 60\n",
     "while x <= 35:\n",
     "    sample_plate.concentration_nm[x] = (plate_1.starting_quantity_dilution_corrected[y] + plate_1.starting_quantity_dilution_corrected[z]) / 2\n",
+    "    sample_plate.melt_temp[x] = (plate_1.melt_temp[y] + plate_1.melt_temp[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
     "    z += 1\n",
     "\n",
     "# fill in samples in row D\n",
-    "\n",
     "x = 36\n",
     "y = 72\n",
     "while x <= 47:\n",
     "    sample_plate.concentration_nm[x] = plate_1.starting_quantity_dilution_corrected[y]\n",
+    "    sample_plate.melt_temp[x] = (plate_1.melt_temp[y] + plate_1.melt_temp[z]) / 2\n",
     "    x += 1\n",
     "    y += 1"
    ]
@@ -157,44 +152,44 @@
    "outputs": [],
    "source": [
     "# fill in samples in row E\n",
-    "\n",
     "x = 48\n",
     "y = 0\n",
     "z = 12\n",
     "while x <= 59:\n",
     "    sample_plate.concentration_nm[x] = (plate_2.starting_quantity_dilution_corrected[y] + plate_2.starting_quantity_dilution_corrected[z]) / 2\n",
+    "    sample_plate.melt_temp[x] = (plate_2.melt_temp[y] + plate_2.melt_temp[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
     "    z += 1\n",
     "\n",
     "# fill in samples in row F\n",
-    "\n",
     "x = 60\n",
     "y = 24\n",
     "z = 36\n",
     "while x <= 71:\n",
     "    sample_plate.concentration_nm[x] = (plate_2.starting_quantity_dilution_corrected[y] + plate_2.starting_quantity_dilution_corrected[z]) / 2\n",
+    "    sample_plate.melt_temp[x] = (plate_2.melt_temp[y] + plate_2.melt_temp[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
     "    z += 1\n",
     "\n",
     "# fill in samples in row G\n",
-    "\n",
     "x = 72\n",
     "y = 48\n",
     "z = 60\n",
     "while x <= 83:\n",
     "    sample_plate.concentration_nm[x] = (plate_2.starting_quantity_dilution_corrected[y] + plate_2.starting_quantity_dilution_corrected[z]) / 2\n",
+    "    sample_plate.melt_temp[x] = (plate_2.melt_temp[y] + plate_2.melt_temp[z]) / 2\n",
     "    x += 1\n",
     "    y += 1\n",
     "    z += 1\n",
     "\n",
     "# fill in samples in row H\n",
-    "\n",
     "x = 84\n",
     "y = 72\n",
     "while x <= 95:\n",
     "    sample_plate.concentration_nm[x] = plate_2.starting_quantity_dilution_corrected[y]\n",
+    "    sample_plate.melt_temp[x] = (plate_2.melt_temp[y] + plate_2.melt_temp[z]) / 2\n",
     "    x += 1\n",
     "    y += 1"
    ]
@@ -205,9 +200,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_plate_df = sample_plate\n",
-    "\n",
-    "sample_plate_df"
+    "# generate dataframe for QC plots to make sure we are sequencing the libraries we want to\n",
+    "cell_count = pd.read_csv(directory + '/put/path/to/cell/count/data/here')\n",
+    "sample_plate = pd.merge(sample_plate, cell_count, on='well')\n",
+    "yellow_color = pd.read_csv(directory + '/put/path/to/yellow/color/data/here')\n",
+    "sample_plate = pd.merge(sample_plate, yellow_color, on='well')\n",
+    "sample_plate.to_csv(output, index=False)\n",
+    "sample_plate"
    ]
   },
   {
@@ -217,10 +216,9 @@
    "outputs": [],
    "source": [
     "# Illumina pooling calculator only accepts libraries with concentration greater than 0.5 nm\n",
-    "\n",
-    "sample_plate_for_pooling_csv = sample_plate[sample_plate.concentration_nm > 0.5]\n",
-    "\n",
-    "sample_plate_for_pooling_csv"
+    "sample_plate_for_pooling = sample_plate[sample_plate.concentration_nm > 0.5]\n",
+    "sample_plate_for_pooling_csv.to_csv(output, index = False)\n",
+    "sample_plate_for_pooling"
    ]
   },
   {
@@ -229,7 +227,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_plate_for_pooling_csv.to_csv(output, index = False)"
+    "# setup the design language for the analysis plots\n",
+    "sns.set_style('darkgrid')\n",
+    "color1 = sns.color_palette([(0.8, 0.6, 0.1),(0.8, 0.8, 0.8)])\n",
+    "color1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# jitter plot of each sample concentration\n",
+    "stripplot = sns.stripplot(data=sample_plate, x=\"cell_count\", y=\"concentration_nm\", hue=\"yellow_color\", palette=color1, linewidth=0.2)\n",
+    "stripplot.set(ylabel=\"concentration (nM)\", ylim=(0,15))\n",
+    "#plt.legend([],[],frameon=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# jitter plot of each sample melt temp\n",
+    "stripplot = sns.stripplot(data=sample_plate, x=\"cell_count\", y=\"melt_temp\", hue=\"yellow_color\", palette=color1, linewidth=0.2)\n",
+    "stripplot.set(ylabel=\"melt temp (Celcius)\", ylim=(75,85))\n",
+    "#plt.legend([],[],frameon=False)"
    ]
   }
  ],
