making the repo more focused

--- a/kapa_quant.ipynb
+++ b/kapa_quant.ipynb
@@ -19,7 +19,8 @@
    "outputs": [],
    "source": [
     "# CHANGEME: dilution factor changes based on experiment  (E.g. for a 1:1000 dilution the dilution factor is 1000)\n",
-    "dilution_factor = \n",
+    "dilution_factor =\n",
+    "dilution_factor_with_units_conversion = dilution_factor / 1000 \n",
     "\n",
     "# CHANGEME: change file path to the csv file that came off the thermal cycler for plate 1 (corresponding to rows A, B, C and D of the sample plate)\n",
     "input_plate_1 = '/put/path/csv/from/plate1/from/thermal/cycler/here'\n",
@@ -28,16 +29,7 @@
     "input_plate_2 = '/put/path/csv/from/plate2/from/thermal/cycler/here'\n",
     "\n",
     "# CHANGEME: change file path to the directory of the experimental data\n",
-    "output = directory + '/data/filename.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dilution_factor_with_units_conversion = dilution_factor / 1000"
+    "output = directory + '/data/'"
    ]
   },
   {
@@ -53,9 +45,7 @@
     "plate_1 = plate_1[12:96]\n",
     "plate_1_index = pd.read_csv('~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_1_index.csv')\n",
     "plate_1 = pd.merge(plate_1, plate_1_index, on = 'Well')\n",
-    "plate_1 = plate_1.astype({'melt_temp': 'float64'})\n",
-    "\n",
-    "plate_1"
+    "plate_1 = plate_1.astype({'melt_temp': 'float64'})"
    ]
   },
   {
@@ -71,9 +61,7 @@
     "plate_2 = plate_2[12:96]\n",
     "plate_2_index = pd.read_csv('~/Documents/code/git_hub/kapa_quantification_to_pooling/plate_2_index.csv')\n",
     "plate_2 = pd.merge(plate_2, plate_2_index, on = 'Well')\n",
-    "plate_2 = plate_2.astype({'melt_temp': 'float64'})\n",
-    "\n",
-    "plate_2"
+    "plate_2 = plate_2.astype({'melt_temp': 'float64'})"
    ]
   },
   {
@@ -83,7 +71,6 @@
    "outputs": [],
    "source": [
     "sample_plate = pd.DataFrame(columns = ['well', 'concentration_nm', 'melt_temp'])\n",
-    "\n",
     "sample_plate.well = [ \n",
     "'A01', 'A02', 'A03', 'A04', 'A05', 'A06', 'A07', 'A08', 'A09', 'A10', 'A11', 'A12',\n",
     "'B01', 'B02', 'B03', 'B04', 'B05', 'B06', 'B07', 'B08', 'B09', 'B10', 'B11', 'B12',\n",
@@ -200,61 +187,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate dataframe for QC plots to make sure we are sequencing the libraries we want to\n",
-    "cell_count = pd.read_csv(directory + '/put/path/to/cell/count/data/here')\n",
-    "sample_plate = pd.merge(sample_plate, cell_count, on='well')\n",
-    "yellow_color = pd.read_csv(directory + '/put/path/to/yellow/color/data/here')\n",
-    "sample_plate = pd.merge(sample_plate, yellow_color, on='well')\n",
-    "sample_plate.to_csv(output, index=False)\n",
-    "sample_plate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Illumina pooling calculator only accepts libraries with concentration greater than 0.5 nm\n",
     "sample_plate_for_pooling = sample_plate[sample_plate.concentration_nm > 0.5]\n",
-    "sample_plate_for_pooling_csv.to_csv(output, index = False)\n",
-    "sample_plate_for_pooling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# setup the design language for the analysis plots\n",
-    "sns.set_style('darkgrid')\n",
-    "color1 = sns.color_palette([(0.8, 0.6, 0.1),(0.8, 0.8, 0.8)])\n",
-    "color1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# jitter plot of each sample concentration\n",
-    "stripplot = sns.stripplot(data=sample_plate, x=\"cell_count\", y=\"concentration_nm\", hue=\"yellow_color\", palette=color1, linewidth=0.2)\n",
-    "stripplot.set(ylabel=\"concentration (nM)\", ylim=(0,15))\n",
-    "#plt.legend([],[],frameon=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# jitter plot of each sample melt temp\n",
-    "stripplot = sns.stripplot(data=sample_plate, x=\"cell_count\", y=\"melt_temp\", hue=\"yellow_color\", palette=color1, linewidth=0.2)\n",
-    "stripplot.set(ylabel=\"melt temp (Celcius)\", ylim=(75,85))\n",
-    "#plt.legend([],[],frameon=False)"
+    "sample_plate_for_pooling_csv.to_csv(output + 'sample_pool.csv', index = False)\n",
+    "sample_plate.to_csv(output + 'sample.csv', index=False)"
    ]
   }
  ],
